rust/kittcore/check_output_3.txt
    Checking kittcore v0.1.0 (C:\Users\shuga\1kittroot\1code\collaborative-canvas\rust\kittcore)
error[E0432]: unresolved import `super::reflex::EntityMatch`
  --> src\scanner\core.rs:20:35
   |
20 | use super::reflex::{ReflexCortex, EntityMatch};
   |                                   ^^^^^^^^^^^ no `EntityMatch` in `scanner::reflex`

error[E0412]: cannot find type `PatternMetadata` in this scope
  --> src\scanner\reflex.rs:31:23
   |
31 |     pattern_meta: Vec<PatternMetadata>,
   |                       ^^^^^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
26 | pub struct ReflexCortex<PatternMetadata> {
   |                        +++++++++++++++++

error[E0412]: cannot find type `PatternMetadata` in this scope
  --> src\scanner\reflex.rs:35:23
   |
35 |     pending_meta: Vec<PatternMetadata>,
   |                       ^^^^^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
26 | pub struct ReflexCortex<PatternMetadata> {
   |                        +++++++++++++++++

error[E0412]: cannot find type `MatchType` in this scope
  --> src\scanner\reflex.rs:95:21
   |
95 |         match_type: MatchType,
   |                     ^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `PatternMetadata` in this scope
   --> src\scanner\reflex.rs:111:51
    |
111 |                 self.pending_meta[existing_idx] = PatternMetadata {
    |                                                   ^^^^^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `PatternMetadata` in this scope
   --> src\scanner\reflex.rs:125:32
    |
125 |         self.pending_meta.push(PatternMetadata {
    |                                ^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `EntityMatch` in this scope
   --> src\scanner\reflex.rs:168:26
    |
168 |         let matches: Vec<EntityMatch> = pma
    |                          ^^^^^^^^^^^ not found in this scope
    |
help: you might be missing a type parameter
    |
48  | impl<EntityMatch> ReflexCortex {
    |     +++++++++++++

error[E0422]: cannot find struct, variant or union type `EntityMatch` in this scope
   --> src\scanner\reflex.rs:173:17
    |
173 |                 EntityMatch {
    |                 ^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `ReflexStats` in this scope
   --> src\scanner\reflex.rs:203:21
    |
203 |         let stats = ReflexStats {
    |                     ^^^^^^^^^^^ not found in this scope

warning: unused imports: `Deserialize` and `Serialize`
  --> src\scanner\reflex.rs:13:13
   |
13 | use serde::{Deserialize, Serialize};
   |             ^^^^^^^^^^^  ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: ambiguous glob re-exports
  --> src\scanner\mod.rs:13:9
   |
13 | pub use core::*;
   |         ^^^^^^^ the name `ScanResult` in the type namespace is first re-exported here
...
21 | pub use document::*;
   |         ----------- but the name `ScanResult` in the type namespace is also re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

warning: ambiguous glob re-exports
  --> src\scanner\mod.rs:13:9
   |
13 | pub use core::*;
   |         ^^^^^^^ the name `ScanStats` in the type namespace is first re-exported here
...
21 | pub use document::*;
   |         ----------- but the name `ScanStats` in the type namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:54:9
   |
54 | pub use scanner::*;
   |         ^^^^^^^^^^ the name `incremental` in the type namespace is first re-exported here
...
57 | pub use resorank::*;
   |         ----------- but the name `incremental` in the type namespace is also re-exported here

warning: unused variable: `static_method_of`
   --> src\resorank\scorer.rs:698:20
    |
698 |     #[wasm_bindgen(static_method_of = ResoRankScorer, js_name = fromJSON)]
    |                    ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_static_method_of`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0433]: failed to resolve: use of undeclared type `MatchType`
  --> src\scanner\reflex.rs:77:53
   |
77 |         self.add_pattern_internal(entity_id, label, MatchType::Exact, 1.0);
   |                                                     ^^^^^^^^^ use of undeclared type `MatchType`

error[E0433]: failed to resolve: use of undeclared type `MatchType`
  --> src\scanner\reflex.rs:84:65
   |
84 |                     self.add_pattern_internal(entity_id, alias, MatchType::Alias, 0.9);
   |                                                                 ^^^^^^^^^ use of undeclared type `MatchType`

warning: variable does not need to be mutable
   --> src\scanner\temporal.rs:569:13
    |
569 |         let mut result = TemporalScanResult {
    |             ----^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `cumulative_shift`
   --> src\scanner\incremental.rs:321:13
    |
321 |     let mut cumulative_shift: i64 = 0;
    |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_cumulative_shift`

warning: variable does not need to be mutable
   --> src\scanner\incremental.rs:321:9
    |
321 |     let mut cumulative_shift: i64 = 0;
    |         ----^^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

Some errors have detailed explanations: E0412, E0422, E0432, E0433.
For more information about an error, try `rustc --explain E0412`.
warning: `kittcore` (lib) generated 8 warnings
error: could not compile `kittcore` (lib) due to 11 previous errors; 8 warnings emitted
